# Cosec-Engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
CosecEngine/: CMakeLists.txt
CosecEngine/src/: CosecEngine.h
CosecEngine/src/CosecEngine/: Application.cpp  Application.h  Core.h  EngineWindow.h  EntryPoint.h  Log.cpp  Log.h
CosecEngine/src/CosecEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
CosecEngine/src/Platform/Unix/: UnixWindow.cpp  UnixWindow.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Application.cpp
TopDownEngine/: CMakeLists.txt
TopDownEngine/src/: TopDownEngine.h  pch.h
TopDownEngine/src/TopDownEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
TopDownEngine/src/TopDownEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
assets/tiles/: seasonal sample (autumn).json  untitled.json
src/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  TextureManager.hpp  TileMap.cpp  TileMap.hpp
src/EntityComponentSystem/: Component.hpp  ECS.cpp  ECS.hpp  Entitiy.cpp  Entity.hpp
src/EntityComponentSystem/Components/: AnimationComponent.hpp  ColliderComponent.hpp  KeyboardInput.hpp  PositionComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
src/Utils/: LTimer.hpp  Vector2D.hpp
